fix(bounty): remove bounty icon on player death fix(bounty): fixed bug where bounty icon was not removed on player death

--- a/BestKillfeed.csproj
+++ b/BestKillfeed.csproj
@@ -13,6 +13,7 @@
 	</PropertyGroup>
 	<ItemGroup>
 	  <Compile Remove="CharacterCreateSystem.cs" />
+	  <Compile Remove="Commands\Bounties.cs" />
 	</ItemGroup>
 	<ItemGroup>
     <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
